--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ deploy:
   environment:
     master: production
     staging: staging
-    development: development
+    develop: development
   skip_cleanup: true
   api_key:
     secure: 0ll0oN31uESzANxRFh0PIV6exxLUCB0SqywcMsy58pvK/eapRVwXwyyKUFuQyLvArZmzeU7Nku6J+QYKqIdGSqWkCTprlhdXLN8yt4C2Lsv2yMhq+7d4qP43mppnTjrjVYN59I6mwkDfIVDVxsswqGui/fbpTsmymtfbl2peA6E=
