--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
 - '0.10'
 before_script:
+- gem update --system
+- bundle -v
+install:
 - npm install grunt-cli
 deploy:
   provider: divshot
