--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
 - '0.10'
 before_script:
 - gem update --system
+- gem install bundler
 - bundle -v
-install:
 - npm install grunt-cli
 deploy:
   provider: divshot
