--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-build-control": "~0.1.2",
+    "grunt-browser-sync": "~1.9.0",
     "grunt-cli": "~0.1.13",
     "grunt-coffeelint": "~0.0.8",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
@@ -46,9 +46,13 @@
     "grunt-jekyll": "~0.4.1",
     "grunt-replace": "^0.8.0",
     "grunt-svgmin": "^2.0.0",
-    "grunt-usemin": "^2.1.0",
+    "grunt-usemin": "~2.4.0",
     "load-grunt-tasks": "^1.0.0",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "grunt-coffeelint": "~0.0.13",
+    "grunt-contrib-csslint": "~0.4.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "jshint-stylish": "~0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
