--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ before_script:
 - npm install grunt-cli bower
 - bower install
 after_success:
+- npm install -g firebase-tools
 - grunt
+- firebase deploy --email ${FIREBASE_USERNAME} --password ${FIREBASE_PASSWORD}
