--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
 after_success:
 - npm install -g firebase-tools
 - grunt
-- firebase deploy --email ${FIREBASE_USERNAME} --password ${FIREBASE_PASSWORD}
+- firebase deploy --token "${FIREBASE_TOKEN}"
