--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_script:
 - bower install
 after_success:
 - npm install -g firebase-tools
-- grunt
+- grunt --force
 - firebase deploy --token "${FIREBASE_TOKEN}"
