--- a/package.json
+++ b/package.json
@@ -27,32 +27,32 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "^2.0.0",
-    "grunt-build-control": "~0.1.2",
     "grunt-browser-sync": "~1.9.0",
+    "grunt-build-control": "~0.1.2",
     "grunt-cli": "~0.1.13",
-    "grunt-coffeelint": "~0.0.8",
+    "grunt-coffeelint": "~0.0.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-jekyll": "~0.4.1",
     "grunt-replace": "^0.8.0",
+    "grunt-scss-lint": "~0.3.8",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "~2.4.0",
+    "jshint-stylish": "~0.4.0",
     "load-grunt-tasks": "^1.0.0",
-    "time-grunt": "^1.0.0",
-    "grunt-coffeelint": "~0.0.13",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "jshint-stylish": "~0.4.0"
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
