--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: node_js
+
 node_js:
 - '0.10'
+
 before_script:
 - gem update --system
 - bundle install
 - npm install grunt-cli bower
 - bower install
-after_success:
-- npm install -g firebase-tools
-- grunt --force
-- firebase deploy --token "${FIREBASE_TOKEN}"
+
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: scripts/deploy.sh
+  on:
+    all_branches: true
+    tags: true
+    repo: kuatsure/thestylus
