--- a/package.json
+++ b/package.json
@@ -1,60 +1,53 @@
 {
   "name": "thestylus",
+  "version": "0.2.0",
   "private": true,
-  "description": "Personal Site of Jarrett Drouillard",
-  "author": "Jarrett Drouillard <jarrett@thestyl.us>",
-  "version": "0.1.0",
-  "keywords": [
-    "Jarrett",
-    "Drouillard",
-    "kuatsure",
-    "southwest ohio",
-    "cincinnati",
-    "dayton",
-    "developer"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/kuatsure/thestylus"
-  },
-  "bugs": {
-    "url": "http://github.com/kuatsure/thestylus/issues"
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "helpful-helpers": "~0.5.0",
+    "inuit-buttons": "~0.4.1",
+    "inuit-flag": "~0.3.2",
+    "inuit-headings": "~0.2.2",
+    "inuit-images": "~0.3.2",
+    "inuit-list-block": "~0.4.2",
+    "inuit-list-inline": "~0.3.2",
+    "inuit-lists": "~0.1.0",
+    "inuit-paragraphs": "~0.1.4",
+    "inuit-responsive-tools": "~0.1.3",
+    "inuit-starter-kit": "~0.2.7",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "symbolset-all": "~0.2.0",
+    "web-vitals": "^1.0.1",
+"bootstrap": "4"
   },
   "scripts": {
-    "test": "grunt check"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-autoprefixer": "~2.0.0",
-    "grunt-browser-sync": "~1.9.0",
-    "grunt-build-control": "~0.1.2",
-    "grunt-cli": "~0.1.13",
-    "grunt-coffeelint": "~0.0.13",
-    "grunt-concurrent": "~1.0.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-coffee": "~0.12.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-htmlmin": "~0.3.0",
-    "grunt-contrib-imagemin": "~0.9.2",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-uglify": "~0.6.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-filerev": "~2.1.2",
-    "grunt-jekyll": "~0.4.1",
-    "grunt-replace": "~0.8.0",
-    "grunt-scss-lint": "~0.3.8",
-    "grunt-svgmin": "~2.0.0",
-    "grunt-usemin": "~2.4.0",
-    "jshint-stylish": "~0.4.0",
-    "load-grunt-tasks": "~1.0.0",
-    "time-grunt": "~1.0.0"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "engines": {
-    "node": ">=0.8.0"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
