--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "helpful-helpers": "~0.5.0",
+    "helpful-helpers": "*",
     "inuit-buttons": "~0.4.1",
     "inuit-flag": "~0.3.2",
     "inuit-headings": "~0.2.2",
     "inuit-images": "~0.3.2",
     "inuit-list-block": "~0.4.2",
-    "inuit-list-inline": "~0.3.2",
+    "inuit-list-inline": "*",
     "inuit-lists": "~0.1.0",
     "inuit-paragraphs": "~0.1.4",
     "inuit-responsive-tools": "~0.1.3",
@@ -22,7 +22,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
-    "symbolset-all": "~0.2.0",
+    "symbolset-all": "*",
     "web-vitals": "^1.0.1",
 "bootstrap": "4"
   },
